--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,7 @@
 	font-size: 1.1rem;
 	letter-spacing: .1rem;
 	color: red;
+	margin-right: .3rem !important;
 }
 
 
@@ -84,6 +85,14 @@ button:focus
 	transition: .3s;
 }
 
+.addToCartBtn
+{
+	width: 5rem;
+	font-size: .7rem;
+	font-weight: bold;
+
+}
+
 .container
 {
 	width: 42rem;
@@ -93,7 +102,6 @@ button:focus
 	box-shadow: rgba(0,0,0,.1) 0rem 0rem 1rem;
 	position: relative;
 	min-height: 25rem;
-
 }
 
 body
@@ -135,7 +143,7 @@ body
 }
 
 
-.userMenu
+.userMenu 
 {
 	list-style: none;
 	position: absolute;
@@ -147,10 +155,33 @@ body
 	width: 10rem;
 	text-align: center;
 	 box-shadow: rgba(0,0,0,.1) 0rem 0rem 2rem;
-	 z-index:100;
 	 right: 0;
+	 z-index:100;
 	 margin: 0 1rem;
 }
+
+.drawer
+{
+	position: absolute;
+	background-color: white;
+	border-radius: 1rem;
+	border:1px solid grey; 
+	width: 12rem;
+	 box-shadow: rgba(0,0,0,.1) 0rem 0rem 2rem;
+	min-height: 10rem;
+	padding: .7rem;
+	 z-index:98;	
+	 margin: 0 1rem;
+	 right: 0;
+}
+
+.cartCards
+{
+	overflow: auto;
+	max-height: 30rem;
+	padding-right:1rem; 
+}
+
 
 .userMenu li
 {
@@ -158,6 +189,8 @@ body
 	
 
 }
+
+
 
 li:hover
 {
@@ -171,12 +204,13 @@ li:hover
 	filter:brightness(8);
 }
 
-.userIcon
+.headerIcon 
 {
 	width: 1.5rem;
 	height: 1.5rem;
+	margin-left:1rem;
 }
-.userIcon:hover
+.headerIcon:hover 
 {
 	cursor: pointer;
 	opacity: .6;
@@ -187,7 +221,7 @@ li:hover
 	text-align: right;
 }
 
-.overUser
+.overBar
 {
 	background-color:grey;
 	left: 0;
@@ -198,6 +232,9 @@ li:hover
 	height: 100vh;
 	position: fixed;
 }
+
+
+
 
 .notification
 {
@@ -369,6 +406,28 @@ li:hover
 	white-space: nowrap;
 }
 
+.cartItem
+{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.cartDelete
+{
+	font-size: 1rem;
+	font-weight: bold;
+	width: 1rem;
+	text-align: right;
+}
+
+.cartDelete:hover
+{
+	opacity: .6;
+	cursor: pointer;
+
+}
+
 
 /**************************************/
 
@@ -396,7 +455,15 @@ li:hover
 {
 	
 	display: grid;
+	justify-content: normal;
+
 	
 }
+
+.errorText
+{
+	font-size:.6rem;
+}
+
 
 }
