--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,234 +1,187 @@
-.card 
-{
-	display:grid;
-	grid-template-columns: .7fr 1fr;
-	grid-template-rows: 1fr  .6fr;
-	border:1px solid var(--Grey);
-	padding: .5rem;
+.card {
+	display: grid;
+	grid-template-columns: 0.7fr 1fr;
+	grid-template-rows: 1fr 0.6fr;
+	border: 1px solid var(--Grey);
+	padding: 0.5rem;
 	border-radius: 1rem;
 	width: 17rem;
 	align-items: center;
-	box-shadow: rgba(0,0,0,.2)	.1rem .1rem;
+	box-shadow: rgba(0, 0, 0, 0.2) 0.1rem 0.1rem;
 	z-index: 90;
 }
 
-.card img
-{
+.card img {
 	width: 5rem;
 	height: 8rem;
-	border-radius: .5rem;
-	box-shadow: rgba(0,0,0,.2)	.1rem .1rem;
-	border:var(--Grey) 1px solid;
+	border-radius: 0.5rem;
+	box-shadow: rgba(0, 0, 0, 0.2) 0.1rem 0.1rem;
+	border: var(--Grey) 1px solid;
 }
 
-
-
-
-
-.card span *
-{
+.card span * {
 	margin: 0;
 }
 
-.author
-{
-	opacity: .8;
+.author {
+	opacity: 0.8;
 	text-transform: uppercase;
-	letter-spacing: .1rem;
-	color:var(--Dark);
-
+	letter-spacing: 0.1rem;
+	color: var(--Dark);
 }
 
-.price
-{
+.price {
 	font-weight: bold;
 	font-size: 1.5rem;
-	letter-spacing: .1rem;
+	letter-spacing: 0.1rem;
 	color: var(--Pink);
-	margin-right: .3rem !important;
+	margin-right: 0.3rem !important;
 	margin-left: auto;
-	grid-area:2/1/2/2;
+	grid-area: 2/1/2/2;
 }
-.link
-{
-	color:var(--Pink);
+.link {
+	color: var(--Pink);
 	text-decoration: none;
 
-	&:hover
-	{
-		text-decoration:underline;
+	&:hover {
+		text-decoration: underline;
 	}
-	h3{
-		font-size:1.15rem}
+	h3 {
+		font-size: 1.15rem;
+	}
 }
 
-.rate
-{
+.rate {
 	display: flex;
 	width: 5rem;
 	justify-content: space-around;
 	list-style: none;
-	margin-right:0;
-	margin-left:auto;
-	padding:  0;
-	color:var(--Pink);
+	margin-right: 0;
+	margin-left: auto;
+	padding: 0;
+	color: var(--Pink);
 }
 
-.rate *
-{
+.rate * {
 	font-size: 1.3rem;
-
 }
 
-
-
-.addToCartBtn
-{
+.addToCartBtn {
 	align-items: center;
 	justify-content: space-around;
 	display: flex;
-	width:calc( 100% - 3rem );
-	font-size: .7rem;
+	width: calc(100% - 3rem);
+	font-size: 0.7rem;
 	font-weight: bold;
 	height: 2rem;
-	border:2px solid var(--Pink);
-	color:var(--Pink);
+	border: 2px solid var(--Pink);
+	color: var(--Pink);
 	border-radius: 2rem;
-	transition: .2s ease-in-out;
+	transition: 0.2s ease-in-out;
 	grid-area: 2/0/2/3;
-	margin:0;
-	margin-left:1.5rem;
+	margin: 0;
+	margin-left: 1.5rem;
 	transition-delay: 0.2s;
-
 }
 
-.addedToCartBtn
-{
+.addedToCartBtn {
 	align-items: center;
 	justify-content: space-around;
 	display: flex;
 	background-color: var(--Pink);
-	color:var(--White);
-	width:calc( 100% - 3rem  );
-	font-size: .7rem;
+	color: var(--White);
+	width: calc(100% - 3rem);
+	font-size: 0.7rem;
 	font-weight: bold;
 	height: 2rem;
 	border-radius: 2rem;
-	transition: .2s ease-in-out;
+	transition: 0.2s ease-in-out;
 	grid-area: 2/0/2/3;
-	margin:0;
-	margin-left:1.5rem;
-
-
-
+	margin: 0;
+	margin-left: 1.5rem;
 }
 
-.plusInButton
-{
+.plusInButton {
 	width: 1.5rem !important;
 	height: 1.5rem !important;
 	font-size: 1.5rem !important;
-	margin:0;
-	animation: plusinbutton .5s alternate  ease-in-out ;
+	margin: 0;
+	animation: plusinbutton 0.5s alternate ease-in-out;
 }
 
-.text
-{
+.text {
 	height: 8rem;
 	display: grid;
-	place-items:center;
+	place-items: center;
 	text-align: center;
 }
 
-.imageContainer
-{
-	position:relative;
+.imageContainer {
+	position: relative;
 	margin-left: auto;
-	margin-right: auto; 
-
+	margin-right: auto;
 }
 
-.heart
-{
-	
-	
-	width:2rem;
+.heart {
+	width: 2rem;
 	height: 2rem;
 	color: var(--Pink);
 }
 
-.heartInside
-{
-	width:1.5rem;
+.heartInside {
+	width: 1.5rem;
 	height: 1.5rem;
-	transform:translateY( -.25rem) ;
-	margin-left:-1.75rem;
+	transform: translateY(-0.25rem);
+	margin-left: -1.75rem;
 	color: var(--Light);
-	transition: .3s;
-
-	
+	transition: 0.3s;
 }
 
-.hearts
-{
+.hearts {
 	position: absolute;
-	top:0;
-	left:0;
+	top: 0;
+	left: 0;
 	cursor: pointer;
 }
 
-.heartInsideClicked
-{
-	width:1.5rem;
+.heartInsideClicked {
+	width: 1.5rem;
 	height: 1.5rem;
-	transform:translateY( -.25rem) ;
-	margin-left:-1.75rem;
+	transform: translateY(-0.25rem);
+	margin-left: -1.75rem;
 	color: var(--Pink);
-	transition: .3s;
-		animation: heart .5s alternate  ease-in-out ;
-	
-
+	transition: 0.3s;
+	animation: heart 0.5s alternate ease-in-out;
 }
 
-
-@keyframes heart
-{
-	from
-	{
-		scale:1;
+@keyframes heart {
+	from {
+		scale: 1;
 	}
 
-	40%
-	{
-		scale:1.8;
+	40% {
+		scale: 1.8;
 	}
 
-	70%
-	{
-		scale:1.3;
+	70% {
+		scale: 1.3;
 	}
 
-	to
-	{
-		scale:1;
+	to {
+		scale: 1;
 	}
 }
 
-
-@keyframes plusinbutton
-{
-	from
-	{
-		scale:1.08;
+@keyframes plusinbutton {
+	from {
+		scale: 1.08;
 	}
 
-	50%
-	{
-		scale:.9;
+	50% {
+		scale: 0.9;
 	}
 
-	to
-	{
-		scale:1;
+	to {
+		scale: 1;
 	}
 }
